[gd_scene load_steps=6 format=3 uid="uid://cctbruyrj1i8n"]

[ext_resource type="Script" path="res://scenes/ui/Auth Screen/auth_screen.gd" id="1_sohdu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1o0f8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26ftp"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.654902)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 6.0
expand_margin_right = 8.0
expand_margin_bottom = 6.0
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81de1"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
border_color = Color(0, 0, 0, 0.654902)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 6.0
expand_margin_right = 8.0
expand_margin_bottom = 6.0
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wq76j"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 6.0
expand_margin_right = 8.0
expand_margin_bottom = 6.0
shadow_color = Color(0, 0, 0, 1)

[node name="AuthScreen" type="Control"]
z_index = 999
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sohdu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MessageContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="ErrorLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MessageContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.313726, 0.247059, 1)
text = "Error"

[node name="SuccessLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MessageContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.901961, 0.247059, 1)
text = "Success"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 512)
layout_mode = 2
alignment = 1

[node name="RegisterScreen" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_1o0f8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Separator5" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UsernameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Username"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RegisterUsername" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
placeholder_text = "..."
alignment = 1
max_length = 15
expand_to_text_length = true

[node name="Separator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PasswordLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Password"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RegisterPassword" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
placeholder_text = "..."
alignment = 1
max_length = 32
expand_to_text_length = true
secret = true

[node name="Separator2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RepeatPasswordLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Repeat Password"

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RegisterPasswordRepeat" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
placeholder_text = "..."
alignment = 1
max_length = 15
expand_to_text_length = true
secret = true

[node name="Separator3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RegisterButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.301961, 0.301961, 0.301961, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/hover = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_81de1")
theme_override_styles/focus = SubResource("StyleBoxFlat_wq76j")
text = "Create Account"

[node name="Separator4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SwitchLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Already have an account? "

[node name="Separator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SwitchToLogin" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RegisterScreen/MarginContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.301961, 0.301961, 0.301961, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/hover = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_81de1")
theme_override_styles/focus = SubResource("StyleBoxFlat_wq76j")
text = "Log In"

[node name="LoginScreen" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_1o0f8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Separator5" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UsernameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Username"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoginUsername" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
placeholder_text = "..."
alignment = 1
max_length = 15
expand_to_text_length = true

[node name="Separator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PasswordLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Password"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoginPassword" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
placeholder_text = "..."
alignment = 1
max_length = 32
expand_to_text_length = true
secret = true

[node name="Separator3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoginButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.301961, 0.301961, 0.301961, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/hover = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_81de1")
theme_override_styles/focus = SubResource("StyleBoxFlat_wq76j")
text = "Log In"

[node name="Separator4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SwitchLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Don't have an account?"

[node name="Separator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SwitchToRegister" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LoginScreen/MarginContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.301961, 0.301961, 0.301961, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/hover = SubResource("StyleBoxFlat_26ftp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_81de1")
theme_override_styles/focus = SubResource("StyleBoxFlat_wq76j")
text = "Register"
